--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <script type="text/javascript" src="libs/jquery.js"></script>
         <script type="text/javascript" src="libs/dat.gui.js"></script>
         <script type="text/javascript" src="libs/TrackballControls.js"></script>
+        <script type="text/javascript" src="libs/Tween.js"></script>
         <script type="text/javascript" src="src/Scene.js"></script>
+        <script type="text/javascript" src="src/PacMan.js"></script>
         <style>
             body{
                 margin: 0;
