Added Ghost object and changed PacMan's initial position

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <script type="text/javascript" src="libs/dat.gui.js"></script>
         <script type="text/javascript" src="libs/TrackballControls.js"></script>
         <script type="text/javascript" src="libs/Tween.js"></script>
+        <script type="text/javascript" src="libs/ThreeBSP.js"></script>
         <script type="text/javascript" src="src/Scene.js"></script>
         <script type="text/javascript" src="src/PacMan.js"></script>
+        <script type="text/javascript" src="src/Ghost.js"></script>
         <style>
             body{
                 margin: 0;
