--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="libs/TrackballControls.js"></script>
         <script type="text/javascript" src="libs/Tween.js"></script>
         <script type="text/javascript" src="libs/ThreeBSP.js"></script>
+        <script type="text/javascript" src="src/Orientation.js"></script>
         <script type="text/javascript" src="src/Scene.js"></script>
         <script type="text/javascript" src="src/PacMan.js"></script>
         <script type="text/javascript" src="src/Ghost.js"></script>
