Switched to buffer geometry and added dot and wall model

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script type="text/javascript" src="libs/Tween.js"></script>
         <script type="text/javascript" src="libs/ThreeBSP.js"></script>
         <script type="text/javascript" src="src/Orientation.js"></script>
+        <script type="text/javascript" src="src/Wall.js"></script>
+        <script type="text/javascript" src="src/Dot.js"></script>
         <script type="text/javascript" src="src/Scene.js"></script>
         <script type="text/javascript" src="src/PacMan.js"></script>
         <script type="text/javascript" src="src/Ghost.js"></script>
