Changed walls, PacMan update and added level map with initial collision detection

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="libs/Tween.js"></script>
         <script type="text/javascript" src="libs/ThreeBSP.js"></script>
         <script type="text/javascript" src="src/Orientation.js"></script>
+        <script type="text/javascript" src="src/CellType.js"></script>
         <script type="text/javascript" src="src/Wall.js"></script>
         <script type="text/javascript" src="src/Dot.js"></script>
         <script type="text/javascript" src="src/Scene.js"></script>
