Improved mouth animation when PacMan collides with walls, added ground and scoreboard

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </style>
     </head>
     <body>
-        <div id="WebGL-Output"></div>
+        <div id="WebGL-Output">
+            <div id="Score"></div>
+        </div>
     </body>
 </html>
