Added superclasss representing a 3D character

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="libs/dat.gui.js"></script>
         <script type="text/javascript" src="libs/Tween.js"></script>
         <script type="text/javascript" src="libs/ThreeBSP.js"></script>
+        <script type="text/javascript" src="src/Character3D.js"></script>
         <script type="text/javascript" src="src/Orientation.js"></script>
         <script type="text/javascript" src="src/CellType.js"></script>
         <script type="text/javascript" src="src/Wall.js"></script>
