Changed icon directory and added some sounds

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>PacMan3D</title>
-        <link rel="icon" type="image/png" href="media/pacman_icon.png"/>
+        <link rel="icon" type="image/png" href="img/pacman_icon.png"/>
         <link rel="stylesheet"  href="css/style.css">
         <script type="text/javascript" src="libs/three.js"></script>
         <script type="text/javascript" src="libs/jquery.js"></script>
