--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="libs/three.js"></script>
         <script type="text/javascript" src="libs/jquery.js"></script>
         <script type="text/javascript" src="libs/Tween.js"></script>
+        <script type="text/javascript" src="src/Game.js"></script>
         <script type="text/javascript" src="src/Character3D.js"></script>
         <script type="text/javascript" src="src/Orientation.js"></script>
         <script type="text/javascript" src="src/CellType.js"></script>
