Added user's manual and extra doc, changed title and added score to end game message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PacMan3D</title>
+        <title>Pac-Man 3D</title>
         <link rel="icon" type="image/png" href="img/pacman_icon.png"/>
         <link rel="stylesheet"  href="css/style.css">
         <script type="text/javascript" src="libs/three.js"></script>
